--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,18 @@ dependencies:
   url_launcher: ^6.2.2
   intl_phone_number_input: ^0.7.5
   http: ^1.5.0
+  audioplayers: ^6.5.1
+  path_provider: ^2.1.5
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  flutter_stripe: ^11.5.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
-
+  build_runner: ^2.5.4
+  hive_generator: ^2.0.1
 dependency_overrides:
   intl: ^0.20.2
 
