--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   google_sign_in: ^6.2.1
   sign_in_with_apple: ^6.1.0
   pinput: ^5.0.1  # OTP code input UI0
-  flutter_tts: ^4.0.2
+  # flutter_tts: ^4.0.2
   uuid: ^4.5.1
   flutter_dotenv: ^6.0.0
   flutter_svg: ^2.1.0
@@ -40,6 +40,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_stripe: ^11.5.0
+  flutter_tts: 4.0.2
+
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +57,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/fonts/
-    - assets/locale/
+   
     - assets/brand_logos/
     - assets/country_flags/
     - .env
