--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/home/ali/Android/Sdk
-flutter.sdk=C:\\Flutter\\flutter
+flutter.sdk=/home/ali/flutter
 flutter.buildMode=release
 flutter.versionName=1.0.0
 flutter.versionCode=16
