--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_stripe: ^11.5.0
   flutter_tts: 4.0.2
+  in_app_purchase: ^3.2.3
 
 
 dev_dependencies:
