--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_stripe: ^11.5.0
   flutter_tts: 4.0.2
   in_app_purchase: ^3.2.3
+  
 
 
 dev_dependencies:
@@ -50,6 +51,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   build_runner: ^2.4.13
   hive_generator: ^2.0.1
+  flutter_launcher_icons: ^0.14.4
 dependency_overrides:
   intl: ^0.20.2
 
@@ -62,3 +64,9 @@ flutter:
     - assets/brand_logos/
     - assets/country_flags/
     - .env
+flutter_icons:
+  android: true
+  ios: false
+  image_path: "assets/icons/app_icon.png"
+  adaptive_icon_background: "#ffffff"  # or a color matching your theme
+  adaptive_icon_foreground: "assets/icons/app_icon.png"
