Initial commit - add subscription service code

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,7 @@
+ndk.dir=/home/ali/Android/Sdk/ndk/27.0.12077973
+
 sdk.dir=/home/ali/Android/Sdk
 flutter.sdk=/home/ali/flutter
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=16
